style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,300&display=swap');

body {
    font-family: Roboto, Helvetica, sans-serif;
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

body > * {
    padding: 0 200px;
    box-sizing: border-box;
    flex: 1;
}

.header, .footer {
    flex: none;
}

.header {
    display: flex;
    justify-content: space-between;
    padding-top: 15px;
    padding-bottom: 15px;
}

.header, .description, .footer {
    background-color: #1F2937;
}

.logo, .call, .quote-source {
    font-size: 24px;
    font-weight: 500;
}

.description {
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    gap: 30px;
    padding-top: 80px;
    padding-bottom: 80px;
}

.content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
}

.title {
    font-size: 48px;
    font-weight: 900;
}

.logo, .title {
    color:#F9FAF8;
}

.links, .subtext, .text {
    font-size: 18px;
    color: #E5E7EB;
}

.randtitle {
    display: flex;
    justify-content: center;
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    padding-top: 50px;
    padding-bottom: 50px;
}

.randinfo {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 50px;
    padding-bottom: 80px;
}

 .caption {
    display: block;
    max-width: 200px;
 }

 .quote {
    background-color: #E5E7EB;
    box-sizing: border-box;
    padding: 20px 240px;
    color: #1F2937;
 }

 .quote-text {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
 }

 .prompt {
    margin: 60px 200px;
 }

 .footer {
    display: flex;
    justify-content: center;
 }

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 20px;
}

a {
    text-decoration: none;
    color: white;
}

button, .prompt {
    background-color: #3882F6;
    border-radius: 10px;
    color:white;
}

button {
    width: 140px;
    height: 40px;
    font-size: 20px;
    font-weight: 500;
}

#bold {
    border: 3px solid white;
}

.cat-photo > img {
    width: 400px;
    height: auto;
}

.image-container {
    width: 200px;
    height: 200px;
    border: 5px solid #3882F6;
    border-radius: 10px;

}

.image-container > img {
    width: 100%;
    height: 100%;
}

